style: prevent layout shift & flicker

--- a/_sass/nav-bar.scss
+++ b/_sass/nav-bar.scss
@@ -7,6 +7,7 @@
     img {
       height: auto;
       width: 100%;
+      aspect-ratio: 1 / 1.25;
       padding: 2rem;
     }
 
